rawrite2 NEWS -- History of user-visible changes

Version 2.0 (unreleased)

Bugfixes
--------
* Fixed reading of read-only images.
* Unread sectors in the image no longer contain garbage. They are zeroized now.

Version 1.2 (8/5/2000)

New features
------------
* Added a lot more of /Fxxx.
* Added some more checking to detect hard disks and subst/network units.
* Added /N switch to use DOS int 25 & 26 instead of BIOS int 13.
* Now it can have several (max 10) input files if dumping image to floppy
  (works like unix command "cat file1 file2 ..fileN").
* The help screen have been expanded a bit.

Version 1.0 (23/4/2000)

First release published.